Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1475

Impala cannot find unmangled symbols in UDF shared libraries

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.0
    • Impala 2.1
    • None
    • None

    Description

      When creating a UDF via the CREATE FUNCTION command, Impala will always attempt to mangle the functions symbol in a .so file, even if the symbols aren't mangled. This leads to errors like:

      ERROR: AnalysisException: Could not find function AddUdf(INT, INT) in: hdfs://quickstart.cloudera:8020/user/hive/udfs/pepimpala.so
      Check that symbol and argument types are correct.
      
       Unable to find _Z6AddUdfPN10impala_udf15FunctionContextERKNS_6IntValES4_
      dlerror: /var/lib/impala/udfs/xxxx.2671.0.so: undefined symbol: _Z6AddUdfPN10impala_udf15FunctionContextERKNS_6IntValES4_
      

      Attachments

        Activity

          People

            skye Skye Wanderman-Milne
            skye Skye Wanderman-Milne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: