IMPALA-1475: accept unmangled native UDF symbols

Change-Id: Ida3b0e505e103c708ad8c2b94b138c9a96eccda5
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/5288
Reviewed-by: Nong Li <nong@cloudera.com>
Tested-by: jenkins
(cherry picked from commit ff8ae6502d0c2bd5c610938104a7f8699e766e19)
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/5312
Reviewed-by: Skye Wanderman-Milne <skye@cloudera.com>